# projectm-eval

./: CMakeLists.txt  ReadMe.md
.github/workflows/: build_emscripten.yml  build_linux.yml  build_osx.yml  build_windows.yml
SimpleCompiler/: CMakeLists.txt  Calc.h  CompileContext.c  CompileContext.h  Compiler.y  CompilerFunctions.c  CompilerFunctions.h  CompilerTypes.h  ExpressionTree.c  ExpressionTree.h  FileParser.cpp  FileParser.hpp  MemoryBuffer.c  MemoryBuffer.h  Scanner.l  TreeFunctions.c  TreeFunctions.h  TreeVariables.c  TreeVariables.h  main.cpp
benchmarks/: CMakeLists.txt  Stubs.cpp
cmake/: FastMathOptimizations.cmake
docs/: Compiler-Internals.md  Expression-Syntax.md
ns-eel2-shim/: CMakeLists.txt  ReadMe.md  ns-eel.c  ns-eel2.c
projectm-eel/: CMakeLists.txt  CompileContext.c  CompileContext.h  Compiler.c  Compiler.h  CompilerFunctions.c  CompilerTypes.h  ExpressionTree.h  MemoryBuffer.c  MemoryBuffer.h  Scanner.c  Scanner.h  TreeFunctions.c  TreeFunctions.h  TreeVariables.h
projectm-eel/api/: projectm_eel.c  projectm_eel.h
projectm-eval/: CMakeLists.txt  CompileContext.c  CompileContext.h  Compiler.c  Compiler.h  Compiler.y  CompilerFunctions.c  CompilerFunctions.h  CompilerTypes.h  MemoryBuffer.c  MemoryBuffer.h  Scanner.c  Scanner.h  Scanner.l  TreeFunctions.c  TreeFunctions.h  TreeVariables.c  TreeVariables.h  install-pkgconfig.cmake.in  projectm-eval.pc.in
projectm-eval/api/: projectm-eval.c  projectm-eval.h
tests/: CMakeLists.txt  Stubs.cpp  TreeFunctionsTest.cpp  TreeFunctionsTest.hpp
